--- a/src/index.pug
+++ b/src/index.pug
@@ -13,18 +13,23 @@ html( lang="en" )
         p How to make Internet better place?
       .list.is-projects
         h2 Projects
+        ul
+          li
+            a( href="https://twitter.com/hplushlab/" rel="me" )
+              h3 News
+              strong twitter.com/hplushlab
       .list
         h2 Links
         ul
           li
             a( href="https://twitter.com/hplushlab/" rel="me" )
               h3 News
-              span twitter.com/#[strong hplushlab]
+              strong twitter.com/hplushlab
           li
             a( href="https://github.com/hplush/" rel="me" )
               h3 Code
-              span github.com/#[strong hplush]
+              strong github.com/hplush
           li
             a( href="mailto:andrey@sitnik.ru" rel="me" )
               h3 Contact
-              span #[strong andrey@sitnik.ru]
+              strong andrey@sitnik.ru
