Use mark instead of strong

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,21 +15,22 @@ html( lang="en" )
         h2 Projects
         ul
           li
-            a( href="https://twitter.com/hplushlab/" rel="me" )
-              h3 News
-              strong twitter.com/hplushlab
+            a( href="#" )
+              h3
+                mark Principles
+              p The way to do it better
       .list
         h2 Links
         ul
           li
             a( href="https://twitter.com/hplushlab/" rel="me" )
               h3 News
-              strong twitter.com/hplushlab
+              mark twitter.com/hplushlab
           li
             a( href="https://github.com/hplush/" rel="me" )
               h3 Code
-              strong github.com/hplush
+              mark github.com/hplush
           li
             a( href="mailto:andrey@sitnik.ru" rel="me" )
               h3 Contact
-              strong andrey@sitnik.ru
+              mark andrey@sitnik.ru
