--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,13 @@ html( lang="en" )
     meta( charset="utf-8" )
     title h+h lab
     meta( name="viewport" content="width=device-width" )
+    link( rel="shortcut icon" href="/base/32.png" sizes="32x32" )
+    link( rel="icon" href="/base/196.png" sizes="196x196" )
+    link( rel="icon" href="/base/512.png" sizes="512x512" )
+    link( rel="mask-icon" href="/about/logo.svg" color="#ffd803" )
+    link( rel="apple-touch-icon" href="/base/apple.png" )
     link( rel="stylesheet" href="/index.sss" )
+    meta( name="description" content="How to make Internet better place?" )
   body
     .layout
       .about
