--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ html( lang="en" )
   body
     .layout
       .about
-        img( src="./about/logo.svg" )
+        img( src="./about/logo.svg" alt="h+h lab logo" )
         h1 #[strong h+h] lab
         p How to make Internet better place?
       .list.is-projects
