--- a/src/index.pug
+++ b/src/index.pug
@@ -16,7 +16,7 @@ html( lang="en" itemtype="https://schema.org/Person" itemscope )
       .about
         img( src="./about/logo.svg" itemprop="logo" alt="h+h lab logo" )
         h1( itemprop="name" ) #[strong h+h] lab
-        p How to make Internet better place?
+        p The lab to create urbanism for modern Web. We are creating tools for users and practices for website authors to make public spaces better.
       .list.is-projects
         h2 Projects
       .list
