Add link to Principles

--- a/src/index.pug
+++ b/src/index.pug
@@ -19,6 +19,12 @@ html( lang="en" itemtype="https://schema.org/Person" itemscope )
         p The lab to create urbanism for the modern Web. We are building tools for users and practices for website authors to make public spaces better.
       .list.is-projects
         h2 Projects
+        ul
+          li
+            a( href="https://github.com/hplush/hplu.sh/blob/master/principles.md" )
+              h3
+                mark Principles
+              div How we should create projects
       .list
         h2 Links
         ul
