--- a/src/index.pug
+++ b/src/index.pug
@@ -37,6 +37,6 @@ html( lang="en" itemtype="https://schema.org/Person" itemscope )
               h3 Code
               mark github.com/hplush
           li
-            a( href="mailto:andrey@sitnik.ru" itemprop="email" )
+            a( href="mailto:hi@hplu.sh" itemprop="email" )
               h3 Contact
-              mark andrey@sitnik.ru
+              mark hi@hplu.sh
