--- a/src/index.pug
+++ b/src/index.pug
@@ -24,7 +24,7 @@ html( lang="en" itemtype="https://schema.org/Person" itemscope )
             a( href="https://github.com/hplush/hplu.sh/blob/master/principles.md" )
               h3
                 mark Principles
-              div How we should create projects
+              div Goals and ethical standards for our projects
       .list
         h2 Links
         ul
