Rename principles to ethical standards

--- a/src/index.pug
+++ b/src/index.pug
@@ -21,10 +21,10 @@ html( lang="en" itemtype="https://schema.org/Person" itemscope )
         h2 Projects
         ul
           li
-            a( href="https://github.com/hplush/hplu.sh/blob/master/principles.md" )
+            a( href="https://github.com/hplush/hplu.sh/blob/master/ethical.md" )
               h3
-                mark Principles
-              div Goals and ethical standards for our projects
+                mark Ethical Standard
+              div Rules to make ethical web services
       .list
         h2 Links
         ul
