Fix branch name

--- a/src/index.pug
+++ b/src/index.pug
@@ -20,7 +20,7 @@ html( lang="en" itemtype="https://schema.org/Person" itemscope )
         h2 Projects
         ul
           li
-            a( href="https://github.com/hplush/hplu.sh/blob/master/ethical.md" )
+            a( href="https://github.com/hplush/hplu.sh/blob/main/ethical.md" )
               h3
                 mark Ethical Standard
               div Rules to make ethical web services
